# algostore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
algo/: CMakeLists.txt  algo.h  bubble-sort.c  heap-sort.c  insertion-sort.c  insertion_sort.c  merge-sort.c  selection-sort.c
test/: CMakeLists.txt  bubble-sort-list.c  insertion-sort-list.c  sort-test.c
util/: CMakeLists.txt  util.c  util.h
